Fix photo too big

--- a/app/assets/stylesheets/dashboards.css.scss
+++ b/app/assets/stylesheets/dashboards.css.scss
@@ -18,6 +18,10 @@
   margin-top: 12px;
 }
 
+.verification-photo {
+  max-width: 400px;
+}
+
 .divider{
   width: 95%;
   border-bottom: solid 1px #EEE;
